--- a/src/components/ArticleItem.module.scss
+++ b/src/components/ArticleItem.module.scss
@@ -1,4 +1,4 @@
-@import './Layout.module.scss';
+@import '../color/color.module.scss';
 
 .articlesItem {
   display: flex;
@@ -13,7 +13,23 @@
   color: #1890ff;
   font-size: 20px;
   line-height: 28px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+}
+
+.title_like {
+  align-items: baseline;
+  display: flex;
+}
+
+.like_img {
+  cursor: pointer;
+  position: relative;
+  top: 2px;
+}
+
+.favoritesCount {
+  margin-left: 5px;
 }
 .articlesTags {
   margin-bottom: 8px;
@@ -27,7 +43,8 @@
 .userInfo {
   display: flex;
 }
-.articleBody {
+.description {
+  @include description;
   width: 680px;
 }
 .userName {
