--- a/src/pages/ArticlePage/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ArticlePage.module.scss
@@ -1,33 +1,48 @@
-@import '../../components//Layout.module.scss';
+@import '../../color/color.module.scss';
 
 .articlesItem {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  height: 140px;
+  width: 940px;
+  height: 700px;
   background-color: $white;
   padding: 16px;
-  margin: 26px 0;
+  margin: 26px auto;
+}
+.title_like {
+  display: flex;
+  align-items: center;
+}
+.favoritesCount {
+  margin-left: 5px;
 }
 .title {
-  color: #1890ff;
+  color: &blue;
   font-size: 20px;
   line-height: 28px;
   margin-bottom: 5px;
+  margin-right: 13px;
 }
 .articlesTags {
   margin-bottom: 8px;
 }
 .tags {
+  color: $grey;
   padding: 3px 5px;
   margin-right: 8px;
-  border: 2px solid #000;
+  border: 2px solid $grey;
   border-radius: 5px;
 }
 .userInfo {
   display: flex;
 }
+.description {
+  margin-top: 16px;
+  @include description;
+}
 .articleBody {
+  margin-top: 25px;
+  color: $black;
   width: 680px;
 }
 .userName {
@@ -35,6 +50,7 @@
 .userDate {
   font-size: 12px;
   line-height: 22px;
+  color: $grey;
 }
 .userImg > img {
   width: 46px;
