--- a/src/components/ArticleItem.module.scss
+++ b/src/components/ArticleItem.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 140px;
+  min-height: 140px;
   background-color: $white;
   padding: 16px;
   margin: 26px 0;
@@ -15,6 +15,9 @@
   line-height: 28px;
   margin-bottom: 10px;
   margin-right: 15px;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .title_like {
@@ -46,6 +49,9 @@
 .description {
   @include description;
   width: 680px;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 .userName {
 }
