--- a/src/components/ArticleItem.module.scss
+++ b/src/components/ArticleItem.module.scss
@@ -10,19 +10,15 @@
   margin: 26px 0;
 }
 .title {
-  color: #1890ff;
-  font-size: 20px;
-  line-height: 28px;
-  margin-bottom: 10px;
-  margin-right: 15px;
-  word-wrap: break-word;
-  word-break: break-word;
-  overflow-wrap: break-word;
+  margin: 0 15px 10px 0;
+  @include title;
+  @include break;
 }
 
 .title_like {
-  align-items: baseline;
   display: flex;
+  align-items: baseline;
+  width: 640px;
 }
 
 .like_img {
@@ -47,11 +43,7 @@
   display: flex;
 }
 .description {
-  @include description;
-  width: 680px;
-  word-wrap: break-word;
-  word-break: break-word;
-  overflow-wrap: break-word;
+  @include break;
 }
 .userName {
 }
