--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
-@import '../color/color.module.scss';
+@import '../../color/color.module.scss';
 
-.Layout {
+.Header {
   display: flex;
   justify-content: space-between;
   padding: 16px 22px;
