--- a/src/pages/ArticlePage/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ArticlePage.module.scss
@@ -62,3 +62,29 @@
   margin-left: 12px;
   border-radius: 50%;
 }
+.userPanel {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.btns {
+  display: flex;
+  column-gap: 12px;
+  &_delete {
+    color: $red;
+    border: 1px solid $red;
+    border-radius: 4px;
+    padding: 8px 16px;
+    width: 78px;
+    height: 40px;
+  }
+  &_edit {
+    color: $green;
+    border: 1px solid $green;
+    border-radius: 4px;
+    padding: 8px 16px;
+    width: 65px;
+    height: 40px;
+  }
+}
