--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -1,10 +1,10 @@
 @import '../../color/color.module.scss';
 
-.RegPage {
+.AuthPage {
   height: 100%;
 }
 
-.regForm {
+.AuthForm {
   width: 384px;
   height: 100%;
   background-color: $white;
@@ -17,25 +17,17 @@
     0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725),
     0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
   border-radius: 6px;
-}
 
-.formTitle {
-  text-align: center;
-  margin-bottom: 21px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 28px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  row-gap: 12px;
-}
-
-.inputBlock {
-  display: flex;
-  flex-direction: column;
+  &_title {
+    text-align: center;
+    margin-bottom: 21px;
+    @include fs20-lh28-w500;
+  }
+  &_footer {
+    display: flex;
+    justify-content: center;
+    @include fs14-lh22;
+  }
 }
 
 .input {
@@ -43,35 +35,33 @@
   padding: 12px 8px;
   border: 1px solid $lightgrey;
   border-radius: 4px;
-}
-
-.check {
-  font-size: 14px;
-  line-height: 22px;
-  margin-bottom: 21px;
-}
-
-.checkBox {
-  margin-right: 8px;
-  width: 16px;
-  height: 16px;
-  background-color: $blue;
-}
-
-.formBtn {
-  width: 320px;
-  padding: 8px;
-  color: $white;
-  background-color: $blue;
-  border-radius: 4px;
-  margin-bottom: 8px;
-}
-
-.formFooter {
-  display: flex;
-  justify-content: center;
-  font-size: 12px;
-  line-height: 20px;
+  &_form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    &__checkbox {
+      font-size: 14px;
+      line-height: 22px;
+      margin-bottom: 21px;
+    }
+  }
+  &_block {
+    display: flex;
+    flex-direction: column;
+  }
+  &_checkbox {
+    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    background-color: $blue;
+  }
+  &_btn {
+    color: $white;
+    width: 320px;
+    margin-bottom: 8px;
+    background-color: $blue;
+    @include btnApp;
+  }
 }
 
 .redirect {
@@ -80,7 +70,5 @@
 }
 
 .error {
-  color: $red;
-  font-size: 14px;
-  line-height: 22px;
+  @include error-msg;
 }
