--- a/src/pages/Create Article/CreateArticle.module.scss
+++ b/src/pages/Create Article/CreateArticle.module.scss
@@ -21,9 +21,7 @@
   display: flex;
   flex-direction: column;
   &_title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    @include fs20-lh28-w500;
     margin-bottom: 20px;
   }
   &_label {
@@ -58,40 +56,34 @@
   }
 }
 
-.tags_form {
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-  text-align: start;
-}
-
 .newTags {
   display: flex;
   column-gap: 17px;
   align-items: baseline;
+  &_form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    text-align: start;
+  }
 }
 
-.btn_delete {
-  color: $red;
-  border: 1px solid $red;
-  border-radius: 4px;
-  padding: 8px 16px;
-  width: 118px;
-  height: 40px;
-}
-
-.btn_add {
-  color: $blue;
-  border: 1px solid $blue;
-  border-radius: 4px;
-  padding: 8px 16px;
-  width: 118px;
-  height: 40px;
-  align-self: flex-end;
+.btn {
+    &_delete {
+      color: $red;
+      width: 118px;
+      border: 1px solid $red;
+      @include btnApp;
+    }
+    &_add {
+      color: $blue;
+      border: 1px solid $blue;
+      width: 118px;
+      @include btnApp;
+      align-self: flex-end;
+    }
 }
 
 .error {
-  color: $red;
-  font-size: 14px;
-  line-height: 22px;
+    @include error-msg;
 }
