--- a/src/pages/EditProfilePage/EditProfile.module.scss
+++ b/src/pages/EditProfilePage/EditProfile.module.scss
@@ -1,41 +1,38 @@
 @import '../../color/color.module.scss';
 
-.RegPage {
+.EditProfile {
   height: 100%;
-}
+  &_form {
+    width: 384px;
+    height: 100%;
+    background-color: $white;
+    margin: 60px auto 70px auto;
+    padding: 48px 32px;
 
-.regForm {
-  width: 384px;
-  height: 100%;
-  background-color: $white;
-  margin: 60px auto 70px auto;
-  padding: 48px 32px;
-
-  border: 1px solid #d9d9d9;
-  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
-    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
-    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725),
-    0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
-  border-radius: 6px;
-}
-
-.formTitle {
-  text-align: center;
-  margin-bottom: 21px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 28px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  row-gap: 12px;
-}
-
-.inputBlock {
-  display: flex;
-  flex-direction: column;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+    box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+      0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+      0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725),
+      0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+  }
+  &_title {
+    text-align: center;
+    margin-bottom: 21px;
+    @include fs20-lh28-w500;
+  }
+  &_btn {
+    width: 320px;
+    color: $white;
+    background-color: $blue;
+    margin-bottom: 8px;
+    @include btnApp;
+  }
+  &_footer {
+    display: flex;
+    justify-content: center;
+    @include fs14-lh22;
+  }
 }
 
 .input {
@@ -43,22 +40,15 @@
   padding: 12px 8px;
   border: 1px solid $lightgrey;
   border-radius: 4px;
-}
-
-.formBtn {
-  width: 320px;
-  padding: 8px;
-  color: $white;
-  background-color: $blue;
-  border-radius: 4px;
-  margin-bottom: 8px;
-}
-
-.formFooter {
-  display: flex;
-  justify-content: center;
-  font-size: 12px;
-  line-height: 20px;
+  &_form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+  }
+  &_block {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .redirect {
