--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,3 +1,8 @@
+.HomePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .pagination {
     display: flex;
     justify-content: center;
