--- a/src/components/ArticleItem/ArticleItem.module.scss
+++ b/src/components/ArticleItem/ArticleItem.module.scss
@@ -1,4 +1,4 @@
-@import '../../color/color.module.scss';
+@import '../../styles/color.module.scss';
 
 .articleCard {
   display: flex;
@@ -7,7 +7,7 @@
   min-height: 140px;
   background-color: $white;
   padding: 16px;
-  margin: 26px 0;
+  
 }
 .card_title{
   display: flex;
