--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -1,14 +1,15 @@
-@import '../../color/color.module.scss';
+@import '../../styles/color.module.scss';
 
 .AuthPage {
-  height: 100%;
+  min-height: 770px;
+  padding-top: 110px;
 }
 
 .AuthForm {
   width: 384px;
   height: 100%;
   background-color: $white;
-  margin: 60px auto 70px auto;
+  margin: 20px auto 0;
   padding: 48px 32px;
 
   border: 1px solid #d9d9d9;
