--- a/src/pages/EditProfilePage/EditProfile.module.scss
+++ b/src/pages/EditProfilePage/EditProfile.module.scss
@@ -1,12 +1,13 @@
-@import '../../color/color.module.scss';
+@import '../../styles/color.module.scss';
 
 .EditProfile {
-  height: 100%;
+  min-height: 770px;
+  padding-top: 110px;
   &_form {
     width: 384px;
     height: 100%;
     background-color: $white;
-    margin: 60px auto 70px auto;
+    margin:0 auto 0;
     padding: 48px 32px;
 
     border: 1px solid #d9d9d9;
