--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,7 +1,8 @@
-@import '../../color/color.module.scss';
+@import '../../styles/color.module.scss';
 
 .LoginPage {
-  height: 100vh;
+  min-height: 770px;
+  padding-top: 100px;
   &_form {
     width: 384px;
     max-height: 100%;
