--- a/src/components/ArticleItem/ArticleItem.module.scss
+++ b/src/components/ArticleItem/ArticleItem.module.scss
@@ -35,11 +35,13 @@
 .tag {
   padding: 3px 5px;
   margin-right: 8px;
-  border: 2px solid #000;
+  border: 2px solid  $black;
   border-radius: 5px;
 }
 
 .description {
+  @include description;
+  width: 680px;
   @include break;
 }
 
